--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/WPFLearning/FileContentIndex
+/.vs/WPFLearning/v17/.suo
+/20240623_WPF3D图形渲染和模型对接/XH.ThreeDLesson/obj/Debug/net7.0-windows/XH.ThreeDLesson.AssemblyInfo.cs
+/20240623_WPF3D图形渲染和模型对接/XH.ThreeDLesson/obj/Debug/net7.0-windows/XH.ThreeDLesson.AssemblyInfoInputs.cache
