1、MVVM分层架构下的弹窗逻辑 2、窗口管理对象的封装 3、弹窗逻辑中的数据传递 4、逻辑管理对象封装 5、逻辑管理对象中的数据传递

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@
 /.vs/WPFLearning/v17/.suo
 /20240623_WPF3D图形渲染和模型对接/XH.ThreeDLesson/obj/Debug/net7.0-windows/XH.ThreeDLesson.AssemblyInfo.cs
 /20240623_WPF3D图形渲染和模型对接/XH.ThreeDLesson/obj/Debug/net7.0-windows/XH.ThreeDLesson.AssemblyInfoInputs.cache
+/20240724_WPF自定义控件/XH.CustomLesson/obj/Debug/net7.0-windows/XH.CustomLesson.AssemblyInfo.cs
+/20240724_WPF自定义控件/XH.CustomLesson/obj/Debug/net7.0-windows/XH.CustomLesson.AssemblyInfoInputs.cache
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.AssemblyInfo.cs
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.AssemblyInfoInputs.cache
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.assets.cache
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.csproj.BuildWithSkipAnalyzers
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.GlobalUsings.g.cs
+/20240727_WPFMvvm/XH.Mvvm/obj/Debug/net7.0-windows/XH.Mvvm_ichznxsi_wpftmp.sourcelink.json
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/Mvvm/MvvmWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/MainWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/Normal/NormalWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson.AssemblyInfo.cs
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson.AssemblyInfoInputs.cache
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson_MarkupCompile.i.cache
+/20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson_MarkupCompile.i.lref
