1、MVVM分层架构下的弹窗逻辑 2、窗口管理对象的封装 3、弹窗逻辑中的数据传递 4、逻辑管理对象封装 5、逻辑管理对象中的数据传递

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 /20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson.AssemblyInfoInputs.cache
 /20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson_MarkupCompile.i.cache
 /20240727_WPFMvvm/XH.MvvmLesson/obj/Debug/net7.0-windows/XH.MvvmLesson_MarkupCompile.i.lref
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/Controls/DateTimePicker.g.i.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/Controls/DateTimePickerIcon.g.i.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/Views/CommandWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/Views/MainWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/Views/ScottPlotWindow.g.i.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/XH.MvvmPattern.AssemblyInfo.cs
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/XH.MvvmPattern.AssemblyInfoInputs.cache
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/XH.MvvmPattern_MarkupCompile.i.cache
+/20240727_WPFMvvm/XH.MvvmPattern/obj/Debug/net7.0-windows/XH.MvvmPattern_MarkupCompile.i.lref
